# luck-or-judgement

./: .gitignore  LICENSE  pyproject.toml
data/: known-companies.json
data/2025-09-06/: analysis.json  portfolio.json  trades.json
data/2025-09-06/research/: AMEX-CIX.md  AMEX-ESP.md  AMEX-LCTX.md  AMEX-PW.md  AMEX-RLGT.md  AMEX-THM.md  AMEX-WRN.md  AMEX-XTNT.md  NASDAQ-AACB.md  NASDAQ-ADVM.md  NASDAQ-AENT.md  NASDAQ-AEYE.md  NASDAQ-AIRJ.md  NASDAQ-ALDX.md  NASDAQ-ARQT.md  NASDAQ-BWAY.md  NASDAQ-BYRN.md  NASDAQ-CBAN.md  NASDAQ-CDZI.md  NASDAQ-CLMB.md  NASDAQ-CRBU.md  NASDAQ-CRMT.md  NASDAQ-CSAI.md  NASDAQ-CURI.md  NASDAQ-CZFS.md  NASDAQ-DMLP.md  NASDAQ-EGHT.md  NASDAQ-EPSN.md  NASDAQ-FHTX.md  NASDAQ-FPAY.md  NASDAQ-GALT.md  NASDAQ-GAMB.md  NASDAQ-HITI.md  NASDAQ-HRZN.md  NASDAQ-ICCT.md  NASDAQ-IDN.md  NASDAQ-ILPT.md  NASDAQ-JMSB.md  NASDAQ-JRSH.md  NASDAQ-KLTR.md  (+57 more)
data/2025-09-06/trades-log/: ARQT-paper=True.json  ARQT.json  BWAY-paper=True.json  BWAY.json  BYRN-paper=True.json  BYRN.json  CBAN.json  (+23 more)
data/company-data/: anthropic:claude-sonnet-4-0.json  google-vertex:gemini-2.5-pro.json  openai-responses:gpt-4.1.json
data/find-companies/: anthropic:claude-sonnet-4-0.txt  google-vertex:gemini-2.5-pro.txt  openai-responses:gpt-4.1.txt
src/: 01_get_assets.py  02_find_companies.py  03_extract_structured_companies.py  s04_filter_companies.py  s05_research_companies.py  s05_research_companies_evals.py  s06_analyse_companies.py  s07_build_portfolios.py  s08_decide_trades.py  s09_trade.py  shared.py  step_05_research_companies.py  step_05_research_companies_evals.py
